<resources>
    <string name="app_name">p1jonathan1</string>
    <string name="universidad">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="CARRERA">INGENIERIA EN TECNOLOGIAS DE LA INFORMACION Y LAS COMUNICACIONES</string>
    <string name="NOMBRE">JONATHAN URIEL PAZ CARDOZO</string>
    <string name="GRUPO">7T11</string>
    <string name="MATERIA">DESARROLLO PARA DISPOSITIVOS MOVILES</string>
    <string name="PROFESOR">VICTOR HUGO DE LA O</string>
</resources>
